--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="project_name">Connexus</string>
     <string name="view_stream">View Stream</string>
+    <string name="title_activity_search_stream">SearchStream</string>
 </resources>
