--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="project_name">Connexus</string>
     <string name="view_stream">View Stream</string>
     <string name="title_activity_search_stream">SearchStream</string>
-    <string name="take_picture">Take picture</string>
+    <string name="Stream">Take picture</string>
 </resources>
